--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,9 @@ x25519-dalek = "1.2.0"
 chacha20poly1305 = "0.9.0"
 sha2 = "0.10.6"
 hmac = "0.12.1"
-rand = "0.8.5"
+# Use specific rand version compatible with dalek crates
+rand = { version = "0.8.5", package = "rand" }
+rand_07 = { version = "0.7.3", package = "rand" }
 base64 = "0.21.0"
 hex = "0.4.3"
 rpassword = "7.2.0"
