--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   server:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile  # Ensure this points to our fixed Dockerfile
+    platform: linux/amd64  # Explicitly set platform for compatibility
     ports:
       - "8080:8080"
     depends_on:
@@ -16,9 +17,16 @@ services:
       - secnet-network
     volumes:
       - server-data:/var/lib/secnet
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8080/api/connection/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 15s
 
   db:
     image: postgres:14
+    platform: linux/amd64  # Explicitly set platform for compatibility
     environment:
       - POSTGRES_USER=secnetuser
       - POSTGRES_PASSWORD=secnetpassword
@@ -31,6 +39,11 @@ services:
       - secnet-network
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U secnetuser -d secnet"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres-data:
