--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ serde_json = "1.0.96"
 ed25519-dalek = "1.0.1"
 x25519-dalek = "1.2.0"
 chacha20poly1305 = "0.9.0"
-sha2 = "0.10.6"
+sha2 = { version = "0.10.6", features = ["std"] }
+sha3 = "0.10.6"  # Added this dependency
 hmac = "0.12.1"
 # Use both rand versions - 0.7 for compatibility with dalek crates
 rand = "0.8.5"
@@ -41,6 +42,8 @@ uuid = { version = "1.3.3", features = ["v4", "serde"] }
 chrono = "0.4.24"
 prettytable-rs = "0.10.0"
 dirs = "5.0.1"
+regex = "1.8.4"   # Added this dependency
+lazy_static = "1.4.0"  # Added this dependency
 
 [profile.release]
 opt-level = 3
@@ -52,7 +55,3 @@ strip = true
 [[bin]]
 name = "secnet"
 path = "src/main.rs"
-
-sha3 = "0.10.6"  
-regex = "1.8.4"
-lazy_static = "1.4.0"
