--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -18,16 +18,19 @@ RUN cargo build --release
 FROM debian:bookworm-slim
 
 # Install runtime dependencies
-RUN apt-get update && apt-get install -y     ca-certificates     libssl3     && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y     ca-certificates     libssl3     wget     && rm -rf /var/lib/apt/lists/*
 
 # Create a non-root user to run the server
 RUN groupadd -r secnet && useradd -r -g secnet secnet
 
-# IMPORTANT FIX: Copy the binary with the correct name
+# IMPORTANT: Copy the binary with the correct name
 COPY --from=builder /usr/src/secnet/server/target/release/secnet-server /usr/local/bin/server
 
 # Set appropriate permissions
 RUN chmod +x /usr/local/bin/server &&     chown secnet:secnet /usr/local/bin/server
+
+# Create necessary directories
+RUN mkdir -p /var/lib/secnet &&     chown secnet:secnet /var/lib/secnet
 
 # Switch to non-root user
 USER secnet
@@ -41,5 +44,5 @@ ENV SQLX_OFFLINE=true
 # Expose the port the server listens on
 EXPOSE 8080
 
-# Run the binary with the correct name
+# Run the binary
 CMD ["/usr/local/bin/server"]
