--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 DATABASE_URL=postgres://secnetuser:secnetpassword@db:5432/secnet
 SERVER_PORT=8080
 RUST_LOG=info
-SQLX_OFFLINE=false
+SQLX_OFFLINE=true
